--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,4 @@ __pycache__
 .DS_Store
 *.pyc
 source/latex/build
-cv_jaesik_park.aux
-cv_jaesik_park.log
-cv_jaesik_park.out
-cv.aux
-cv.log
-cv.out
+source/latex/cv.tex
